--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1></h1>
         <!-- <h1>Posters!!</h1> -->
           <div class="flex">
-            <div><a href="Naruto.jpeg"><img src="Naruto.jpeg" height="150px" weidth="200px"></a></div>
-            <div><a href="Inception.jpg"><img src="Inception.jpg" height="150px" weidth="200px"></a></div>
-            <div><a href="Rick and morty.jpg"><img src="Rick and morty.jpg" height="150px" weidth="200px"></a></div>
-            <div><a href="Family guy.jpg"><img src="Family guy.jpg" height="150px" weidth="200px"></a></div>
-            <div><a href="Parasite.jpg"><img src="Parasite.jpg" height="150px" weidth="200px"></a></div>
+            <div class="zoom"><audio autoplay><source src="01. 20th Century Fox Fanfare.mp3" type="audio/mpeg"></audio><a href="Naruto.jpeg"><img src="Naruto.jpeg" height="150px" weidth="200px"></a></div>
+            <div class="zoom"><a href="Inception.jpg"><img src="Inception.jpg" height="150px" weidth="200px"></a></div>
+            <div class="zoom"><a href="Rick and morty.jpg"><img src="Rick and morty.jpg" height="150px" weidth="200px"></a></div>
+            <div class="zoom"><a href="Family guy.jpg"><img src="Family guy.jpg" height="150px" weidth="200px"></a></div>
+            <div class="zoom"><a href="Parasite.jpg"><img src="Parasite.jpg" height="150px" weidth="200px"></a></div>
 
           </div>
         <div>
